# dpgen2

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pub-docker.yml  pub-pypi.yml  pyright.yml  test.yml
docs/: .gitignore  alloy_configs.rst  cli.rst  conf.py  developer.md  dpgen2_configs.rst  exploration.md  index.rst  input.md  op_configs.rst  operator.md  quickcli.md  step_configs.rst  submit_args.rst
dpgen2/: __init__.py  __main__.py  constants.py
dpgen2/conf/: __init__.py  alloy_conf.py  conf_generator.py  file_conf.py  unit_cells.py
dpgen2/entrypoint/: args.py  common.py  download.py  main.py  showkey.py  status.py  submit.py  submit_args.py  watch.py  workflow.py
dpgen2/exploration/: conf_filter.py  conf_selector.py  conf_selector_frame.py  group.py  lmp_task_group.py  report.py  scheduler.py  stage.py  task.py
dpgen2/flow/: __init__.py  block.py  dpgen_loop.py  loop.py  prep_run_dp_train.py  prep_run_fp.py  prep_run_lmp.py  schedule.py  train_dp.py
dpgen2/fp/: __init__.py  deepmd.py  gaussian.py  prep_fp.py  run_fp.py  vasp.py  vasp_input.py
dpgen2/op/: __init__.py  collect_data.py  md_settings.py  (+7 more)
tests/: context.py  fake_data_set.py  mocked_ops.py  test_block_cl.py  test_collect_data.py  test_conf_filter.py  test_dpgen_loop.py  test_exploration_group.py  test_exploration_scheduler.py  test_loop.py  test_prep_dp_train.py  test_prep_run_dp_labeling.py  test_prep_run_dp_train.py  test_prep_run_gaussian.py  test_prep_run_lmp.py  test_prep_run_vasp.py  test_run_command.py  test_run_dp_train.py  test_select_confs.py  test_train_dp.py
(+103 files in other folders)
